# shell

./: .gitignore  CMakeLists.txt
include/: builtins.h  common.h  exec.h  history.h  parser.h  terminal.h
src/: builtins.c  exec.c  history.c  main.c  parser.c  terminal.c
